Show Admin photo at poll detail, avoids overlapping navbars
Former-commit-id: 4cb7a767ddf66e791d6e57db82f09b601d2a1499

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,5 +1,5 @@
 $min-height: 700px;
-$margin-bottom-for-footer: 108px;
+$margin-bottom-for-footer: 148px;
 $break-large: 1200px;
 $break-medium: 720px;
 $break-small: 320px;
